--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
@@ -1,51 +1,11 @@
 <kt-toastr #toastr></kt-toastr>
 <kt-filtered-data [filteredList]="filteredDataList" [filterName]="'deposit'"></kt-filtered-data>
 <kt-portlet>
-    <!-- PORTLET LOADING | Binded to TABLE Datasource -->
-    <!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
-    <!-- <kt-portlet-header [title]="'Branch List'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
-
-        <ng-container ktPortletTools>
-
-        </ng-container>
-    </kt-portlet-header> -->
-    <!-- end::Header -->
-
     <kt-portlet-body>
-        <!-- start::FILTERS & GROUP ACTIONS -->
-        <div class="kt-form kt-margin-b-10">
-
-            <!-- start::GROUP ACTIONS -->
-            <!-- Group actions list: 'Delete selected' | 'Fetch selected' | 'Update status for selected' -->
-            <!-- Group actions are shared for all LISTS -->
-
-            <!-- end::GROUP ACTIONS -->
-        </div>
-        <!-- end::FILTERS & GROUP ACTIONS -->
-
-        <!-- MATERIAL TABLE | Binded to datasources -->
-        <!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
+        <div class="kt-form kt-margin-b-10"></div>
         <div class="mat-table__wrapper">
             <mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
                 matSortActive="id" matSortDirection="asc" matSortDisableClear>
-                <!-- Checkbox Column -->
-
-                <!-- Table with selection -->
-                <!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-                <!-- <ng-container matColumnDef="select">
-                    <mat-header-cell *matHeaderCellDef class="mat-column-checkbox">
-                        <mat-checkbox (change)="$event ? masterToggle() : null"
-                            [checked]="selection.hasValue() && isAllSelected()"
-                            [indeterminate]="selection.hasValue() && !isAllSelected()">
-                        </mat-checkbox>
-                    </mat-header-cell>
-                    <mat-cell *matCellDef="let row" class="mat-column-checkbox">
-                        <mat-checkbox (click)="$event.stopPropagation()"
-                            (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
-                        </mat-checkbox>
-                    </mat-cell>
-                </ng-container> -->
-
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID </mat-header-cell>
                     <mat-cell *matCellDef="let element">
@@ -72,10 +32,7 @@
                     <mat-header-cell *matHeaderCellDef>Withdrawal Initiated Date</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div class="d-block">
-                            <div>
-                                {{element?.createdAt}}
-                            </div>
-                           
+                            <div>{{element?.createdAt}}</div>
                         </div>
                     </mat-cell>
                 </ng-container>
@@ -95,7 +52,7 @@
                         {{element?.branchName}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="accountNumber">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Account Number 
+                    <mat-header-cell *matHeaderCellDef class="align-right">Account Number
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
                         {{element?.accountNumber}}
@@ -115,10 +72,9 @@
                         {{element?.ifscCode}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalPaymentDate">
-                    <mat-header-cell *matHeaderCellDef>Withdrawal  Payment Date</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Withdrawal Payment Date</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        
-                    </mat-cell>{{element?.depositDate ? element?.depositDate : '-'}}
+                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bankTransactionID">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
@@ -136,42 +92,28 @@
                     <mat-header-cell *matHeaderCellDef>Withdrawal Status</mat-header-cell>
                     <mat-cell *matCellDef="let element" [ngClass]="{'text-orange' : element?.depositStatus == 'pending',
                     'text-red' : element?.depositStatus == 'rejected',
-                    'text-green' : element?.depositStatus == 'completed'}" >
+                    'text-green' : element?.depositStatus == 'completed'}">
                         {{element?.depositStatus | titlecase}}
                     </mat-cell>
                 </ng-container>
-
-           
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div *ngxPermissionsOnly="['orderEdit']" (click)="editWithdrawal(element.id)" class="kt-pointer">
-                                Edit</div>
+                            <div (click)="editWithdrawal(element?.id)" class="kt-pointer">Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
-
                 <mat-header-row *matHeaderRowDef="displayedColumns;" style="width: 200%;"></mat-header-row>
-
                 <mat-row *matRowDef="let row; columns: displayedColumns" style="width: 200%;"></mat-row>
             </mat-table>
-
             <div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
-            <!-- Message for empty data  -->
             <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
         </div>
-
-        <!-- start: BOTTOM -->
         <div class="mat-table__bottom">
-            <!-- MATERIAL SPINNER | Url: 'https://material.angular.io/components/progress-spinner/overview' -->
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
-            <!-- MATERIAL PAGINATOR | Binded to dasources -->
-            <!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
             <mat-paginator [pageSize]="25" [pageSizeOptions]="[25,50,100,150]"
                 [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
         </div>
-        <!-- end: BOTTOM -->
     </kt-portlet-body>
-    <!-- end::Body -->
 </kt-portlet>
