cc-fe::removed internal branchcolumn and assign branch from add leads,  leads mngmnt.

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/add-lead/add-lead.component.html
@@ -291,7 +291,7 @@
                             </div>
                         </div>
 
-                        <div class="row kt-padding-t-15">
+                        <!-- <div class="row kt-padding-t-15">
                             <div class="col-4 form-label">
                                 <mat-label class="mandatory">Internal Branch</mat-label>
                             </div>
@@ -311,7 +311,7 @@
                                     Required field
                                 </mat-error>
                             </div>
-                        </div>
+                        </div> -->
 
                         <ng-container *ngIf="data.action !== 'assignBranch'">
                             <div class="row kt-padding-t-15">
