--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -54,11 +54,6 @@
                     </mat-cell>
                 </ng-container>
 
-                <!-- <ng-container matColumnDef="time">
-                    <mat-header-cell *matHeaderCellDef >Time</mat-header-cell>
-                    <mat-cell *matCellDef="let lead">{{lead.updatedAt | date:'shortTime'}}</mat-cell>
-                </ng-container> -->
-
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
                     <mat-cell *matCellDef="let lead">
@@ -158,37 +153,23 @@
                             View</div>
                     </mat-cell>
                 </ng-container>
-                <!-- <ng-container matColumnDef="appraiser">
-                    <mat-header-cell *matHeaderCellDef></mat-header-cell>
-                    <mat-cell *matCellDef="let lead">
-                        <ng-container *ngIf="lead.status.id == '1'">
-                            <div [ngStyle]="{'display': 'inherit'}" *ngxPermissionsOnly="['assignAppraiserEdit']">
-                                <button (click)="assign(lead)" *ngIf="!lead?.customerAssignAppraiser"
-                                    class="apply-kyc appraiser-btn">Assign Appraiser</button>
-                                <button (click)="updateAppraiser(lead)" *ngIf="lead?.customerAssignAppraiser"
-                                    class="apply-kyc appraiser-btn">Update Appraiser</button>
-                            </div>
-                        </ng-container>
-
-                    </mat-cell>
-                </ng-container> -->
 
                 <ng-container matColumnDef="menu">
                     <mat-header-cell *matHeaderCellDef></mat-header-cell>
                     <mat-cell *matCellDef="let loan">
-                        <div *ngxPermissionsOnly="['addNewRequest', 'addBranchCustomer']">
+                        <div *ngxPermissionsOnly="['addNewRequest']">
                             <button mat-button [matMenuTriggerFor]="menu">
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu="matMenu" xPosition="before">
-                                <ng-container *ngIf="loan.internalBranchId">
+                                <ng-container>
                                     <button *ngxPermissionsOnly="['addNewRequest']" mat-menu-item
                                         (click)="newRequest(loan)">New Request</button>
                                 </ng-container>
-                                <ng-container *ngIf="!loan.internalBranchId">
+                                <!-- <ng-container *ngIf="!loan.internalBranchId">
                                     <button *ngxPermissionsOnly="['addBranchCustomer']" mat-menu-item
                                         (click)="assignBranch(loan)">Assign Branch</button>
-                                </ng-container>
+                                </ng-container> -->
                             </mat-menu>
                         </div>
                     </mat-cell>
