cc-fe::added city in internal branch appraiser request

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-add/new-request-add.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-add/new-request-add.component.html
@@ -73,7 +73,7 @@
                                         <option [value]=null [disabled]="true"> Select Internal Branch
                                         </option>
                                         <option *ngFor="let branch of branches" [value]="branch.id">
-                                            {{branch.name | titlecase}}
+                                            {{branch.name | titlecase}} {{ '(' + branch?.city?.name + ')' }}
                                         </option>
                                     </select>
                                     <mat-error
