changes in admin wallet

--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests-edit/withdrawal-requests-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests-edit/withdrawal-requests-edit.component.html
@@ -91,7 +91,7 @@
                         <div class="col-8">
                             <select class="form-control" formControlName="withdrawalStatus"
                                 [class.isError]="controls.withdrawalStatus.touched && controls.withdrawalStatus.invalid">
-                                <option value="" [selected]="true" [disabled]="true">Select Status</option>
+                                <option value="">Select Status</option>
                                 <option [value]="status.value" *ngFor="let status of withdrawalStatus">
                                     {{status.name | titlecase}}</option>
                             </select>
@@ -102,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div *ngIf="withdrawInfo?.transactionData?.withdrawalStatus == 'pending'"
+                    <div *ngIf="withdrawInfo?.transactionData?.depositStatus == 'pending'"
                         class="row kt-margin-t-15">
                         <div class="col-12 text-right">
                             <kt-button [value]="'Update'" [type]="'submit'" (click)="submit()"></kt-button>
