--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests/deposit-requests.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests/deposit-requests.component.html
@@ -10,23 +10,23 @@
                 <ng-container matColumnDef="transactionID">
                     <mat-header-cell *matHeaderCellDef>Transaction ID</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.transactionUniqueId}}
+                        {{element?.transactionUniqueId ? element?.transactionUniqueId : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bankTransactionID">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.bankTransactionUniqueId}}
+                        {{element?.bankTransactionUniqueId ? element?.bankTransactionUniqueId: '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerID">
                     <mat-header-cell *matHeaderCellDef>Customer ID </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.customerId}}</mat-cell>
+                        {{element?.customer?.customerUniqueId ? element?.customer?.customerUniqueId : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositDate">
                     <mat-header-cell *matHeaderCellDef>Deposit Date </mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.depositDate}}
+                    <mat-cell *matCellDef="let element">{{element?.depositDate ? element?.depositDate : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="fullName">
@@ -36,42 +36,38 @@
                             <div>
                                 {{element?.customer?.firstName || element?.customer?.lastName ? (element?.customer?.firstName + ' ' + element?.customer?.lastName | titlecase) : '-'}}
                             </div>
-                            <!-- <div>{{element?.paymentRecievedDate ? (element?.paymentRecievedDate | date:'h:mm a') : ''}}
-                            </div> -->
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.customer.mobileNumber}}</mat-cell>
+                        {{element?.customer?.mobileNumber ? element?.customer?.mobileNumber : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositmodeofpayment">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit mode of payment</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit Mode Of Payment</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.paymentType}}</mat-cell>
+                        {{element?.paymentType ? (element?.paymentType | uppercase) : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositBankName">
                     <mat-header-cell *matHeaderCellDef>Deposit Bank Name</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.bankName}}</mat-cell>
+                        {{element?.bankName ? element?.bankName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositBranchName">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit Branch Name
-                    </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit Branch Name</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.branchName}}
+                        {{element?.branchName ? (element?.branchName | titlecase) : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositAmount">
                     <mat-header-cell *matHeaderCellDef class="align-right">Deposit Amount</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.transactionAmount}}
+                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositStatus">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit Status
-                    </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">Deposit Status</mat-header-cell>
                     <mat-cell *matCellDef="let element" [ngClass]="{'text-orange' : element?.depositStatus == 'pending',
                     'text-red' : element?.depositStatus == 'rejected',
                     'text-green' : element?.depositStatus == 'completed'}" class="align-right">
@@ -81,7 +77,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editDeposit(element?.id)" class="kt-pointer">Edit</div>
+                            <div (click)="editDeposit(element?.id)" class="kt-pointer view-link">Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
