--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests-edit/deposit-requests-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/deposit-requests/deposit-requests-edit/deposit-requests-edit.component.html
@@ -14,10 +14,11 @@
                     </div>
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Deposit mode of payment</label>
+                            <label class="font-weight-500 text-color">Deposit Mode Of Payment</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="depositmodeofpayment" class="form-control" disabled>
+                            <input type="text" formControlName="depositmodeofpayment" class="form-control"
+                            [value]="controls?.depositmodeofpayment?.value | uppercase" disabled>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
