--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests-edit/withdrawal-requests-edit.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests-edit/withdrawal-requests-edit.component.html
@@ -6,7 +6,7 @@
                 <form [formGroup]="withdrawForm">
                     <div class="row kt-margin-t-15">
                         <div class="col-4 align-self-center">
-                            <label class="font-weight-500 text-color">Customer Id</label>
+                            <label class="font-weight-500 text-color">Customer ID</label>
                         </div>
                         <div class="col-8">
                             <input type="text" formControlName="customerId" class="form-control" disabled>
@@ -41,7 +41,8 @@
                             <label class="font-weight-500 text-color">Withdrawal Initiated Date</label>
                         </div>
                         <div class="col-8">
-                            <input type="text" formControlName="withdrawalInitiatedDate" class="form-control" disabled>
+                            <input type="text" formControlName="withdrawalInitiatedDate" class="form-control"
+                            [value]="controls?.withdrawalInitiatedDate?.value | date: 'MMM d, y, h:mm a'" disabled>
                         </div>
                     </div>
                     <div class="row kt-margin-t-15">
