--- a/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/digi-gold/wallet/withdrawal-requests/withdrawal-requests/withdrawal-requests.component.html
@@ -9,7 +9,7 @@
                 <ng-container matColumnDef="customerId">
                     <mat-header-cell *matHeaderCellDef>Customer ID </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.customerId}}
+                        {{element?.customer?.customerUniqueId ? element?.customer?.customerUniqueId : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="customerFullName">
@@ -21,60 +21,57 @@
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.customer?.mobileNumber}}</mat-cell>
+                        {{element?.customer?.mobileNumber ? element?.customer?.mobileNumber : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalTransactionID">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Transaction ID</mat-header-cell>
-                    <mat-cell *matCellDef="let element">{{element?.transactionUniqueId}}
-                    </mat-cell>
+                    <mat-cell *matCellDef="let element">{{element?.transactionUniqueId ? element?.transactionUniqueId : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalInitiatedDate">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Initiated Date</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div class="d-block">
-                            <div>{{element?.createdAt}}</div>
+                            <div>{{element?.paymentReceivedDate ? (element?.paymentReceivedDate | date : 'yyyy-MM-dd') : '-'}}</div>
                         </div>
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalAmount">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Amount </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.transactionAmont}}</mat-cell>
+                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bankName">
                     <mat-header-cell *matHeaderCellDef class="align-right">Bank Name </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.bankName}}</mat-cell>
+                        {{element?.bankName ? element?.bankName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="branchName">
                     <mat-header-cell *matHeaderCellDef>Branch Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.branchName}}</mat-cell>
+                        {{element?.branchName ? element?.branchName : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="accountNumber">
-                    <mat-header-cell *matHeaderCellDef class="align-right">Account Number
-                    </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">Account Number </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.accountNumber}}
+                        {{element?.accountNumber ? element?.accountNumber : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="accountHolderName">
                     <mat-header-cell *matHeaderCellDef class="align-right">Account Holder Name
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.accountHolderName}}
+                        {{element?.accountHolderName ? element?.accountHolderName : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="ifscCode">
-                    <mat-header-cell *matHeaderCellDef class="align-right">IFSC Code
-                    </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef class="align-right">IFSC Code</mat-header-cell>
                     <mat-cell *matCellDef="let element" class="align-right">
-                        {{element?.ifscCode}}</mat-cell>
+                        {{element?.ifscCode ? (element?.ifscCode | uppercase) : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalPaymentDate">
                     <mat-header-cell *matHeaderCellDef>Withdrawal Payment Date</mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.transactionAmount ? element?.transactionAmount : '-'}}</mat-cell>
+                        {{element?.depositApprovedDate ? (element?.depositApprovedDate | date : 'yyyy-MM-dd') : '-'}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="bankTransactionID">
                     <mat-header-cell *matHeaderCellDef>Bank Transaction ID</mat-header-cell>
@@ -83,9 +80,9 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="depositmodeofpayment">
-                    <mat-header-cell *matHeaderCellDef>Deposit mode of payment </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Deposit Mode Of Payment </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        {{element?.paymentType ? element?.paymentType : '-'}}
+                        {{element?.paymentType ? (element?.paymentType | uppercase) : '-'}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="withdrawalStatus">
@@ -100,7 +97,7 @@
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         <div [ngStyle]="{'display': 'inherit'}">
-                            <div (click)="editWithdrawal(element?.id)" class="kt-pointer">Edit</div>
+                            <div (click)="editWithdrawal(element?.id)" class="kt-pointer view-link">Edit</div>
                         </div>
                     </mat-cell>
                 </ng-container>
