worked on filter in  deposit and withdraw request

--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -450,6 +450,76 @@
           </div>
         </div>
 
+<!-- Deposit Requests -->
+        <div class="kt-portlet__body" *ngIf="filterName =='depositRequests'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-5">
+                      <label>Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-5">
+                      <label>By Deposit Status</label>
+                      <select class="form-control" formControlName="depositStatus">
+                        <option value="" selected>Select</option>
+                        <option value="Pending">Pending</option>
+                        <option value="Completed">Completed</option>
+                        <option value="Rejected">Rejected</option>
+                      </select>
+                    </div>                       
+                    <div class="col-2 d-flex align-items-end">
+                      <kt-button [type]="'button'" [value]="'Apply'"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div> 
+                  </div>            
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+<!-- Withdraw Requests -->
+        <div class="kt-portlet__body" *ngIf="filterName =='withdrawalRequests'">
+          <div class="kt-form">
+            <form [formGroup]="filterForm">
+              <div class="form-group kt-form__group row">
+                <div class="col-12 kt-margin-bottom-20-mobile">
+                  <div class="row">
+                    <div class="col-5">
+                      <label>Date</label>
+                      <input type="text" class="form-control" [matDatepicker]="pickerStartDate"
+                        (click)="pickerStartDate.open()" formControlName="startDate">
+                      <mat-datepicker #pickerStartDate></mat-datepicker>
+                    </div>
+                    <div class="col-5">
+                      <label>By Withdrawal Status</label>
+                      <select class="form-control" formControlName="depositStatus">
+                        <option value="" selected>Select</option>
+                        <option value="Pending">Pending</option>
+                        <option value="Completed">Completed</option>
+                        <option value="Rejected">Rejected</option>
+                      </select>
+                    </div>                   
+                    <div class="col-2 d-flex align-items-end">
+                      <kt-button [type]="'button'" [value]="'Apply'"
+                        (click)="applyFilter()">
+                      </kt-button>
+                    </div>  
+                  </div>             
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+
+
         <!-- Cancel Order Details -->
         <div class="kt-portlet__body" *ngIf="filterName =='cancelOrderDetails'">
           <div class="kt-form">
